@@ -1,0 +1,32 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+ <modelVersion>4.0.0</modelVersion>
+  <groupId>com.nativelibs4java</groupId>
+  <artifactId>javacl-generator</artifactId>
+  <name>JavaCL OpenCL Wrapper Code Generator</name>
+  <url>http://code.google.com/p/javacl/</url>
+  <version>${opencl4java.version}</version>
+  <packaging>jar</packaging>
+  
+  <parent>
+	  <groupId>com.nativelibs4java</groupId>
+	  <artifactId>opencl4java-parent</artifactId>
+	  <version>1.0-SNAPSHOT</version>
+	  <relativePath>../Parent</relativePath>
+  </parent>
+
+  <dependencies>
+  	
+	<dependency>
+	  <groupId>com.jnaerator</groupId>
+	  <artifactId>jnaerator</artifactId>
+	  <version>${jnaerator.version}</version>
+	  <scope>compile</scope>
+	</dependency>
+	
+  </dependencies>
+
+</project>
+
+
