@@ -1,0 +1,14 @@
+/*
+ * To change this template, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+package com.nativelibs4java.util;
+
+/**
+ *
+ * @author ochafik
+ */
+public interface ValuedEnum {
+	long value();
+}
