@@ -4,6 +4,7 @@
  */
 package com.nativelibs4java.opencl;
 
+import com.nativelibs4java.opencl.demos.HardwareReport;
 import java.util.List;
 import java.util.Map;
 import org.junit.Test;
