@@ -15,6 +15,7 @@
   </parent>
 
   <modules>
+    <module>Generator</module>
     <module>OpenCL4Java</module>
     <module>Demos</module>
     <module>JavaCL</module>
